# EffectiveAltruismHandbook

./: .gitignore  README.md  flake.nix  patch.diff  patch2.diff  plan.md  plan2.md  plan3.md  plan4.md  pyproject.toml  test_help.py  update_merge.py
.Jules/: palette.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  build.yml  lint.yml  test.yml  ty.yml  update-dependencies.yml
.jules/: bolt.md  palette.md  sentinel.md
.serena/: project.yml
src/ea_handbook/: __init__.py  converter.py  main.py  scraper.py
src/eahandbookcompiler/: __init__.py  __main__.py  converter.py  main.py  scraper.py  scraper.py.orig
tests/: test_converter.py  test_main.py  test_scraper.py  test_scraper.py.orig
