[project]
name = "ea-handbook"
version = "2026.3.1"
description = "EA Handbook parser to ebook"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]

[project.scripts]
ea-handbook = "ea_handbook.main:cli"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage-badge>=1.1.2",
    "defusedxml>=0.7.1",
    "genbadge[coverage]>=1.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
