[project]
name = "ea-handbook"
version = "2026.3.1"
description = "EA Handbook parser to ebook"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [{ name = "kirill denisov", email = "kirill.denisov700@gmail.com" }]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "genbadge[coverage]>=1.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
ea-handbook = "ea_handbook.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
