[project]
name = "eahandbookcompiler"
version = "2026.3.1"
description = "EA Handbook parser to ebook"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [{ name = "kirill denisov", email = "kirill.denisov700@gmail.com" }]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
eahandbookcompiler = "eahandbookcompiler.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "COM812", # trailing comma - conflicts with ruff formatter
    "ISC001", # implicit string concat - conflicts with ruff formatter
    "S603",   # subprocess call - intentional, inputs are trusted
    "TRY003", # long exception messages are acceptable here
    "EM101",  # string literal in exception - acceptable for clarity
    "EM102",  # f-string in exception - acceptable for clarity
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/eahandbookcompiler/scraper.py" = ["FBT001", "FBT002"] # verbose bool param
"src/eahandbookcompiler/main.py" = ["FBT001", "FBT002", "PLR0913"] # Click boolean flags and many params
"src/eahandbookcompiler/__main__.py" = ["D100"] # No docstring needed
"tests/**" = [
    "S101",    # assert is standard in pytest
    "ANN",     # annotations not needed in tests
    "D",       # docstrings not needed in tests
    "PLC0415", # imports inside functions are fine in tests
    "PLR2004", # magic values are fine in tests
    "INP001",  # tests directory is not a package
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "tests"]
